добавил пример файла env

--- a/env.dist
+++ b/env.dist
@@ -1,1 +1,8 @@
-DATABASE_URL = postgresql://db_user:secret@127.0.0.1:5634/guild-of-dev
+DB_PORT=5634:5432
+FASTAPI_PORT=8000:8000
+
+POSTGRES_HOST=db_app
+POSTGRES_USER=db_user
+POSTGRES_PASSWORD=secret
+POSTGRES_DB=guild-of-dev
+POSTGRES_PORT=5432
